[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/TextureButton.gd" type="Script" id=1]

[node name="TextureButton" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="." to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="." to="." method="_on_TextureButton_pressed"]
